lc 56 and test List.of